# motif-entropy-fraud

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md
docs/: GITHUB_READY_STATUS.md
docs/rebuild/: 01_RESEARCH_FINDINGS.md  02_DATASET_STRATEGY.md  03_METHOD_OPPORTUNITIES.md  04_REBUILD_BLUEPRINT.md  05_BUILD_START_PLAN.md  06_BUILD_VALIDATION_STATUS.md  07_P_ADIC_Q1_PIPELINE_STATUS.md  08_IEEE_SPL_Q1_CANDIDATE_STATUS.md  10_IEEE_SPL_MANUSCRIPT_SKELETON.md  (+30 more)
results/: README.md  artifact_manifest.json
scripts/: softwarex_readiness_check.py
tests/: test_claim_discipline.py  test_data_contracts.py  test_ieee_spl_manuscript_draft.py  test_local_egonets.py  test_motif_fixtures.py  test_null_models.py  test_p_adic_branch_signatures.py  test_p_adic_claim_audit.py  test_p_adic_core.py  test_p_adic_hierarchy_selection.py  test_p_adic_ieee_pipeline.py  test_p_adic_multiresolution_operator.py  test_p_adic_official_baselines.py  test_p_adic_publication_figures.py  test_p_adic_real_pipeline.py  test_p_adic_reproduce_all.py  test_p_adic_reproducibility_contract.py  test_p_adic_rich_features.py  test_p_adic_scoring.py  test_p_adic_statistics.py  test_p_adic_strong_baselines.py  test_p_adic_temporal_signal.py  test_p_adic_temporal_surveillance.py  test_p_adic_tree_scan_cusum.py  test_p_adic_tree_scan_publication.py  test_p_adic_tree_scan_resolution_sensitivity.py  test_p_adic_tree_scan_theory.py  test_p_adic_vehicle_claim_pipeline.py  test_reproduce_all.py  test_results_artifact_manifest.py  test_statistics.py
(+100 files in other folders)
